// * Copyright (c) 2015, 2018 Cirrus Link Solutions and others
// *
// * This program and the accompanying materials are made available under the
// * terms of the Eclipse Public License 2.0 which is available at
// * http://www.eclipse.org/legal/epl-2.0.
// *
// * SPDX-License-Identifier: EPL-2.0
// *
// * Contributors:
// *   Cirrus Link Solutions - initial implementation

//
// To compile:
// cd client_libraries/java
// protoc --proto_path=../../ --java_out=src/main/java ../../sparkplug_b.proto
//

syntax = "proto3";

package sparkplug_b;

option go_package = "sparkplug-edge/internal/proto/sparkplug_b";

// 仅保留核心结构，完整内容请参考官方 https://github.com/eclipse/tahu/blob/main/sparkplug_b/sparkplug_b.proto
message Payload {
  int64 timestamp = 1;
  uint64 seq = 2;
  repeated Metric metrics = 3;
}

message Metric {
  string name = 1;
  int32 datatype = 2;
  double double_value = 3;
  int64 int_value = 4;
  string string_value = 5;
}
